syntax = "proto3";

package app_service;

import "grpc_definitions/models.proto"; 

service AppService {
    rpc CreateApp(CreateAppRequest) returns (CreateAppResponse) {}
    rpc DeleteApp(DeleteAppRequest) returns (DeleteAppResponse) {}
    rpc GetApps(GetAppsRequest) returns (GetAppsResponse){}
    rpc GetByID(GetByIDRequest) returns (GetByIDResponse) {}
    rpc AppendMember(AppendMemberRequest) returns (AppendMemberResponse) {}
    rpc RemoveMember(RemoveMemberRequest) returns (RemoveMemberResponse) {}
}

message RemoveMemberRequest {
    string member_uuid = 1;
    string tracing_ID = 2;
    string app_uuid = 3;
}
message RemoveMemberResponse {
    int32 status_code = 1;
    string msg = 2;
}

message AppendMemberRequest {
    repeated string member = 1;
    string tracing_ID = 2;
    string app_uuid = 3;
}
message AppendMemberResponse {
    int32 status_code = 1;
    string msg = 2;
}

message DeleteAppRequest {
    string app_uuid = 1;
    string tracing_ID = 2;
}

message DeleteAppResponse {
    int32 status_code = 1;
    string msg = 2;
}
message CreateAppRequest {
    string owner_uuid = 1;
    string name = 2;
    string organization = 3;
    // light distributed tracing ID - light because it serves the propose  of developing
    // because it is super dope what I am doing
    string tracing_ID = 4;
    string description = 5;
    // member == user uuid
    repeated string member = 6;
    repeated string settings = 7;
}
message CreateAppResponse {
    int32 status_code = 1;
    string msg = 2;
    string app_uuid = 3;
}

message GetAppsRequest {
    string user_uuid = 1;
    // light distributed tracing ID - light because it serves the propose  of developing
    // because it is super dope what I am doing
    string tracing_ID = 4;
}
message GetAppsResponse {
    int32 status_code = 1;
    string msg = 2;
    repeated models.LightAppModel apps = 3;
}

message GetByIDRequest {
    string app_uuid = 1;
    string tracing_ID = 4;
}

message GetByIDResponse {
    int32 status_code = 1;
    string msg = 2;
    models.AppModel data = 3;
}



